<resources>
    <string name="app_name">Personal Project</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="todo">TODO</string>
    <string name="register">REGISTER</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="favorites">Favorites</string>
    <string name="log_out">Log out</string>
    <string name="show_list">Show List</string>
    <string name="visit_webpage">Visit webpage</string>
    <string name="visit_location">Visit location</string>
</resources>